# Playground

GLRender/: CMakeLists.txt
GLRender/common/: types.h
GLRender/math/: plane3.cpp  plane3.h  ray3.cpp  ray3.h  vec3.cpp  vec3.h
GLRender/tests/: CMakeLists.txt  main.cpp  testsuite.cpp  testsuite.h
GLRender/utils/: program.cpp  program.h
